// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`src/components/gallery/Gallery > limited card count check 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        
      </div>
      <div
        class="gallery-item"
      />
      
      
      
    </div>
    <div
      class="GalleryCard"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        
      </div>
      <div
        class="gallery-item"
      />
      
      
      
    </div>
    <div
      class="octo-gallery-new"
    >
      + New
    </div>
    <div
      class="gallery-hidden-cards"
    >
      <div
        class="HiddenCardCount"
      >
        <div
          class="hidden-card-title"
        >
          Cards hidden
        </div>
        <button
          class="Button"
          title="hidden-card-count"
          type="button"
        >
          
          <span>
            2
          </span>
          
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`src/components/gallery/Gallery > return Gallery and click new 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        
      </div>
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
      
      
      
    </div>
    <div
      class="GalleryCard"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        
      </div>
      <div
        class="gallery-item"
      />
      
      
      
    </div>
    <div
      class="octo-gallery-new"
    >
      + New
    </div>
    
  </div>
</div>
`;

exports[`src/components/gallery/Gallery > return Gallery readonly 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      style="opacity: 1;"
    >
      
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
      
      
      
    </div>
    <div
      class="GalleryCard"
      style="opacity: 1;"
    >
      
      <div
        class="gallery-item"
      />
      
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/Gallery > should match snapshot 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper override menuOpened optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        <div
          class="Menu noselect left "
        >
          <div
            class="menu-contents"
          >
            <div
              class="menu-options"
            >
              <div>
                <div
                  aria-label="Delete"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="menu-option__icon"
                    >
                      <i
                        class="CompassIcon icon-trash-can-outline DeleteIcon trash-can-outline"
                      />
                    </div>
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Delete
                    </div>
                    
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
              <div>
                <div
                  aria-label="Duplicate"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="menu-option__icon"
                    >
                      <i
                        class="CompassIcon icon-content-copy content-copy"
                      />
                    </div>
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Duplicate
                    </div>
                    
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
              <div>
                <div
                  aria-label="Move to a board…"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="menu-option__icon"
                    >
                      <svg
                        class="BoardIcon Icon"
                        fill="currentColor"
                        height="24"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <g
                          opacity="0.8"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M4 4H20V20H4V4ZM2 4C2 2.89543 2.89543 2 4 2H20C21.1046 2 22 2.89543 22 4V20C22 21.1046 21.1046 22 20 22H4C2.89543 22 2 21.1046 2 20V4ZM8 6H6V12H8V6ZM11 6H13V16H11V6ZM18 6H16V9H18V6Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </g>
                      </svg>
                    </div>
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Move to a board…
                    </div>
                    
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
              <div>
                <div
                  aria-label="Copy link"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="menu-option__icon"
                    >
                      <i
                        class="CompassIcon icon-link-variant LinkIcon"
                      />
                    </div>
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Copy link
                    </div>
                    
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
              <div />
            </div>
            <div
              class="menu-spacer hideOnWidescreen"
            />
            <div
              class="menu-options hideOnWidescreen"
            >
              <div
                aria-label="Cancel"
                class="MenuOption TextOption menu-option menu-cancel"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Cancel
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
      
      
      
    </div>
    <div
      class="GalleryCard"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        
      </div>
      <div
        class="gallery-item"
      />
      
      
      
    </div>
    <div
      class="octo-gallery-new"
    >
      + New
    </div>
    
  </div>
</div>
`;

exports[`src/components/gallery/Gallery > should match snapshot without permissions 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper override menuOpened optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        <div
          class="Menu noselect left "
        >
          <div
            class="menu-contents"
          >
            <div
              class="menu-options"
            >
              <div />
              <div>
                <div
                  aria-label="Copy link"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="menu-option__icon"
                    >
                      <i
                        class="CompassIcon icon-link-variant LinkIcon"
                      />
                    </div>
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Copy link
                    </div>
                    
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
              <div />
            </div>
            <div
              class="menu-spacer hideOnWidescreen"
            />
            <div
              class="menu-options hideOnWidescreen"
            >
              <div
                aria-label="Cancel"
                class="MenuOption TextOption menu-option menu-cancel"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Cancel
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
      
      
      
    </div>
    <div
      class="GalleryCard"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        
      </div>
      <div
        class="gallery-item"
      />
      
      
      
    </div>
    
    
  </div>
</div>
`;

exports[`src/components/gallery/Gallery should match snapshot without permissions 1`] = `
<div>
  <div
    class="Gallery"
  >
    <div
      class="GalleryCard selected"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper override menuOpened optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        <div
          class="Menu noselect left "
        >
          <div
            class="menu-contents"
          >
            <div
              class="menu-options"
            >
              <div />
              <div>
                <div
                  aria-label="Copy link"
                  class="MenuOption TextOption menu-option"
                  role="button"
                >
                  <div
                    class="d-flex"
                  >
                    <div
                      class="menu-option__icon"
                    >
                      <i
                        class="CompassIcon icon-link-variant LinkIcon"
                      />
                    </div>
                  </div>
                  <div
                    class="menu-option__content"
                  >
                    <div
                      class="menu-name"
                    >
                      Copy link
                    </div>
                    
                  </div>
                  <div
                    class="noicon"
                  />
                </div>
              </div>
              <div />
            </div>
            <div
              class="menu-spacer hideOnWidescreen"
            />
            <div
              class="menu-options hideOnWidescreen"
            >
              <div
                aria-label="Cancel"
                class="MenuOption TextOption menu-option menu-cancel"
                role="button"
              >
                <div
                  class="d-flex"
                >
                  <div
                    class="noicon"
                  />
                </div>
                <div
                  class="menu-option__content"
                >
                  <div
                    class="menu-name"
                  >
                    Cancel
                  </div>
                  
                </div>
                <div
                  class="noicon"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="gallery-item"
      >
        <div
          class="DividerElement"
        />
        <div
          class="DividerElement"
        />
      </div>
      
      
      
    </div>
    <div
      class="GalleryCard"
      style="opacity: 1;"
    >
      <div
        aria-label="menuwrapper"
        class="MenuWrapper optionsMenu"
        role="button"
      >
        <button
          class="IconButton CardActionsMenuIcon"
          type="button"
        >
          <i
            class="CompassIcon icon-dots-horizontal OptionsIcon"
          />
        </button>
        
      </div>
      <div
        class="gallery-item"
      />
      
      
      
    </div>
    
    
  </div>
</div>
`;
